--- a/src/ua/javarush/java/marathon/halloweenbot/myproject/Dockerfile
+++ b/src/ua/javarush/java/marathon/halloweenbot/myproject/Dockerfile
@@ -1,3 +1,3 @@
-﻿FROM openjdk:17-jdk-slim
+﻿FROM eclipse-temurin:17-jdk
 COPY target/HaloweenBot-01-1.0-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
