Fix Docker build: copy all files and run mvn

--- a/src/ua/javarush/java/marathon/halloweenbot/myproject/Dockerfile
+++ b/src/ua/javarush/java/marathon/halloweenbot/myproject/Dockerfile
@@ -1,3 +1,5 @@
 ﻿FROM eclipse-temurin:17-jdk
-COPY target/HaloweenBot-01-1.0-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+COPY . /app
+WORKDIR /app
+RUN mvn clean package -DskipTests
+CMD ["java", "-jar", "target/HalloweenBot-01-1.0-SNAPSHOT.jar"]
