Use alpine image and optimize Dockerfile

--- a/src/ua/javarush/java/marathon/halloweenbot/myproject/Dockerfile
+++ b/src/ua/javarush/java/marathon/halloweenbot/myproject/Dockerfile
@@ -1,5 +1,7 @@
-﻿FROM eclipse-temurin:17-jdk
-COPY . /app
+﻿FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
+COPY pom.xml .
+RUN mvn dependency:go-offline -B
+COPY src ./src
 RUN mvn clean package -DskipTests
 CMD ["java", "-jar", "target/HalloweenBot-01-1.0-SNAPSHOT.jar"]
