--- a/src/ua/javarush/java/marathon/halloweenbot/myproject/Dockerfile
+++ b/src/ua/javarush/java/marathon/halloweenbot/myproject/Dockerfile
@@ -1,7 +1,13 @@
-﻿FROM eclipse-temurin:17-jdk-alpine
+﻿# Builder stage
+FROM maven:3.9-eclipse-temurin-17-alpine AS builder
 WORKDIR /app
 COPY pom.xml .
 RUN mvn dependency:go-offline -B
 COPY src ./src
 RUN mvn clean package -DskipTests
-CMD ["java", "-jar", "target/HalloweenBot-01-1.0-SNAPSHOT.jar"]
+
+# Runtime stage
+FROM eclipse-temurin:17-jre-alpine
+WORKDIR /app
+COPY --from=builder /app/target/HalloweenBot-01-1.0-SNAPSHOT.jar app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
